--- a/src/components/InventoryDisplay.scss
+++ b/src/components/InventoryDisplay.scss
@@ -26,6 +26,7 @@
   line-height: 24px;
   text-align: right;
   width: 100%;
+  user-select: none;
   > span {
     background: #aaaaaa88;
     color: black;
