--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -13,6 +13,14 @@
   .icon {
   }
 
+  .drag-area {
+    user-select: none;
+    cursor: grab;
+    line-height: 90px;
+    border-right: 1px darkgrey solid;
+    display: flex;
+    flex-direction: column;
+  }
   .main-area {
     width: 525px;
   }
