--- a/src/components/PlaceBeltLinePanel.scss
+++ b/src/components/PlaceBeltLinePanel.scss
@@ -15,3 +15,19 @@
   height: 100%;
   vertical-align: top;
 }
+
+.place-belt-line-region-selector {
+  margin-left: 20px;
+  padding: 4px 12px;
+}
+
+.place-belt-line-build-button {
+  width: 60px;
+  padding: 4px;
+  background: lightblue;
+}
+
+.place-belt-line-button-row {
+  display: flex;
+  justify-content: flex-end;
+}
