--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -72,6 +72,7 @@
     display: flex;
     width: 100%;
     justify-content: flex-end;
+    margin-right: 10px;
     //line-height: 32px;
 
     .equals-sign {
