--- a/src/components/InventoryDisplay.scss
+++ b/src/components/InventoryDisplay.scss
@@ -11,20 +11,20 @@
 
 .inventory-slot {
   border: 4px darkgray inset;
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   > * {
     pointer-events: none;
   }
   .icon {
     transform: scale(0.6);
-    margin: -6px;
+    margin: -12px;
   }
 }
 
 .item-stack-count-text {
   position: relative;
-  top: -28px;
+  top: -22px;
   font-size: 24px;
   line-height: 24px;
   text-align: right;
@@ -33,6 +33,9 @@
   > span {
     background: #aaaaaa88;
     color: black;
+  }
+  .sprite-technology-no-science + & {
+    display: none;
   }
 }
 
