Clean up Lab UX
Doesn't break when you double-click lab output buffers.
Button to change research on lab.

--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -119,3 +119,11 @@
   margin: auto 0;
   padding: 6px;
 }
+
+.choose-research {
+  font-size: 18px;
+  line-height: 20px;
+  width: 100px;
+  margin: auto 0;
+  padding: 6px;
+}
