--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,10 @@ span {
   width: $appWidth;
 }
 
+.dialog {
+  z-index: 100;
+}
+
 .icon {
   display: inline-block;
   background-image: url("./icons.png");
