--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -46,26 +46,10 @@
     margin-right: auto;
   }
 
-  .producer-count-area {
-    display: flex;
-
-    .icon {
-      height: 64px;
-      margin-bottom: -32px;
-      transform: scale(0.5) translateY(-50%);
-    }
-
-    .plus-minus {
-      padding: 0px 6px;
-      margin: 0 10px;
-      border: 1px outset darkgrey;
-      font-size: 16px;
-      line-height: 32px;
-    }
-    .producer-count {
-      font-size: 16px;
-      line-height: 32px;
-    }
+  .icon {
+    height: 64px;
+    margin-bottom: -32px;
+    transform: scale(0.5) translateY(-50%);
   }
 
   .recipe-display {
@@ -126,4 +110,21 @@
   width: 100px;
   margin: auto 0;
   padding: 6px;
+}
+
+.count-area {
+  display: flex;
+  user-select: none;
+
+  .plus-minus {
+    padding: 0px 6px;
+    margin: 0 10px;
+    border: 1px outset darkgrey;
+    font-size: 16px;
+    line-height: 32px;
+  }
+  .count {
+    font-size: 16px;
+    line-height: 32px;
+  }
 }
