Resaerch Tree cleanup
Now shows prereqs in green.
Can only select unlocked research.
Shows unmet reqs

Filter research that definitely will be cut.
No weapons/armor for one. Probably no space science.
Add button to set current research.

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,11 @@ span {
   user-select: none;
 }
 
+.clickable.disabled {
+  pointer-events: none;
+  opacity: 0.4;
+}
+
 .material-icons {
   font-family: "Material Icons";
   font-weight: normal;
