--- a/src/components/RegionSelector.scss
+++ b/src/components/RegionSelector.scss
@@ -1,13 +1,11 @@
 @import "./constants";
 .region-selector {
-  width: $appWidth;
-  height: 90vh;
-  background: darkblue;
-  position: fixed;
-  z-index: 2;
+  background: lightgrey;
+  border: 2px black solid;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  .inventory-display {
-    margin-top: auto;
+  .top {
+    line-height: 32px;
   }
 }
