--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -27,8 +27,18 @@
 
   .top-area {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     border-top: 1px solid black;
-    justify-content: flex-end;
+    background: lightgrey;
+    position: relative;
+    margin-top: -33px;
+    width: 350px;
+    border-radius: 6px 6px 0 0;
+
+    .count-area {
+      margin-top: 4px;
+    }
   }
 
   .bottom-area {
@@ -40,15 +50,17 @@
     color: black;
     //border: 1px solid black;
     font-size: 20px;
-    line-height: 20px;
+    line-height: 32px;
     min-width: 150px;
-    padding-left: 4px;
+    padding-left: 18px;
     margin-right: auto;
+    display: inline-block;
+    flex-basis: 100%;
   }
 
   .icon {
-    margin-bottom: -32px;
-    transform: scale(0.5) translateY(-50%);
+    margin-bottom: -36px;
+    transform: scale(0.5) translateY(-30%);
   }
 
   .recipe-display {
@@ -135,4 +147,8 @@
   .mainArea {
     opacity: 0.8;
   }
+}
+
+.main-area.empty-lane .bottom-area .build-something {
+  margin: 25px 50px 0;
 }
