--- a/src/components/FactoryGame.scss
+++ b/src/components/FactoryGame.scss
@@ -94,7 +94,7 @@
     font-size: 24px;
     line-height: 1;
     color: black;
-    margin: auto;
+    //    margin: auto;
     padding-left: 12px;
     height: 100%;
     vertical-align: top;
@@ -151,7 +151,7 @@
   font-size: 12px;
   line-height: 14px;
   border: 2px solid darkgrey;
-  border-radius: 4px;
+  border-radius: 4px 4px 0 0;
   border-bottom: none;
   margin: 2px 4px;
   cursor: pointer;
