--- a/src/components/InserterCard.scss
+++ b/src/components/InserterCard.scss
@@ -1,6 +1,6 @@
 @import "./_constants";
 
-$inserterColor: #ffff1a;
+$inserterColor: slategrey;
 .inserter-card {
   display: flex;
   user-select: none;
@@ -9,15 +9,16 @@ $inserterColor: #ffff1a;
 .inserter-card.wide {
   width: $appWidth;
   height: $inserterCardHeight;
-  border: 1px solid black;
 
   .inserter-diamond {
     width: 50px;
     height: 50px;
     border: 1px solid black;
+    margin-left: -50px;
+    box-sizing: border-box;
     background-color: $inserterColor;
 
-    left: ($appWidth/2-30px);
+    left: ($appWidth / 2 - 30px);
     top: -10px;
     position: relative;
     z-index: 1;
@@ -45,7 +46,7 @@ $inserterColor: #ffff1a;
     position: relative;
     background-color: $inserterColor;
     width: 600px;
-    left: -50px;
+    //left: -50px;
     height: $inserterCardHeight;
     font-size: 20px;
 
