Lots more UI cleanup, new colors!

--- a/src/components/InserterCard.scss
+++ b/src/components/InserterCard.scss
@@ -18,7 +18,7 @@ $inserterColor: slategrey;
     box-sizing: border-box;
     background-color: $inserterColor;
 
-    left: ($appWidth / 2 - 30px);
+    left: ($appWidth / 2 + 20px);
     top: -10px;
     position: relative;
     z-index: 1;
@@ -52,7 +52,7 @@ $inserterColor: slategrey;
 
     .count-area {
       position: relative;
-      left: 380px;
+      left: 378px;
     }
   }
 }
@@ -63,7 +63,6 @@ $inserterColor: slategrey;
   font-size: 0;
   align-items: center;
   //transform: scale(0.7);
-  margin-top: 2px;
   border-top: 1px darkgrey solid;
 
   .icon {
