--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -5,7 +5,6 @@
   height: $cardHeight;
   //border: 1px black solid;
   display: flex;
-  background: lightgrey;
   box-sizing: border-box;
   user-select: none;
   justify-content: flex-end;
@@ -20,9 +19,15 @@
     border-right: 1px darkgrey solid;
     display: flex;
     flex-direction: column;
+    background: lightgrey;
+    border-radius: 4px;
+    position: relative;
+    top: -10px;
   }
   .main-area {
     width: 505px;
+    background: lightgrey;
+    height: 100px;
   }
 
   .top-area {
@@ -56,6 +61,13 @@
     margin-right: auto;
     display: inline-block;
     flex-basis: 100%;
+    .edit-icon {
+      visibility: hidden;
+    }
+    &:hover .edit-icon {
+      visibility: visible;
+      margin-left: 6px;
+    }
   }
 
   .icon {
@@ -84,16 +96,21 @@
     }
   }
 
+  .spacer {
+    width: 5px;
+    flex-shrink: 0;
+  }
+
   .output-area {
     width: 70px;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
-    margin: auto 0;
     font-size: 16px;
     border-top: 1px solid black;
+    background: lightgrey;
+    border-radius: 4px;
     //height: 86px;
     .output-arrow {
       box-sizing: border-box;
