--- a/src/components/FactoryGame.scss
+++ b/src/components/FactoryGame.scss
@@ -1,11 +1,17 @@
 @import "./_constants";
 
+body {
+  background-color: #222;
+}
+
 .factory-game {
   font-size: 0;
+  background-color: $bgColor;
+  margin-left: 40px;
 }
 
 .main-bus-header {
-  background-color: orange;
+  background-color: #526b83;
   width: $appWidth;
   height: 100px;
   display: flex;
@@ -46,7 +52,7 @@
 .lane-header-item-stack {
   width: 35px;
   height: 50px;
-  background-color: darkorange;
+  //background-color: $bgColor;
   > * {
     pointer-events: none;
   }
@@ -54,7 +60,7 @@
 
 .mainBusSegment,
 .main-bus-segment {
-  background-color: orange;
+  //  background-color: $bgColor;
   height: ($cardHeight + $inserterCardHeight + 2);
   width: 400px;
 }
@@ -99,7 +105,7 @@
     height: 100%;
     vertical-align: top;
   }
-  .recipeList {
+  .recipe-list {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -107,6 +113,7 @@
     .icon {
       box-sizing: border-box;
       border-color: lightgrey;
+      margin: 2px;
       //border: 1px red solid;
       //transform: scale(0.8);
       //margin-right: -8px;
@@ -127,12 +134,27 @@
 .scroller {
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 80vh;
+  width: $appWidth;
+  height: 78vh;
+  scrollbar-color: red blue;
+  scrollbar-width: thin;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
 }
 
 .add-producer,
 .explore-button {
-  width: 90%;
   height: 32px;
   font-size: 16px;
   line-height: 32px;
@@ -162,7 +184,17 @@
   }
 }
 
-.factory-button-panel {
+.debug-button-panel {
+  padding: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  summary {
+    font-weight: bold;
+    font-size: 16px;
+    user-select: none;
+  }
+  &[open] {
+  }
   .clickable {
     width: 250px;
     display: inline-block;
