More UI Upgrades
Replace Add Lane button with icon
Add hover tooltips to a few titles
Clean up overflowing titles to not wrap
Pretty up filters on mainbus

--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -61,12 +61,20 @@
     margin-right: auto;
     display: inline-block;
     flex-basis: 100%;
+    overflow: hidden;
     .edit-icon {
       visibility: hidden;
     }
     &:hover .edit-icon {
       visibility: visible;
       margin-left: 6px;
+    }
+    .title-text {
+      display: inline-block;
+      max-width: 300px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow-x: none;
     }
   }
 
