--- a/src/components/InventoryDisplay.scss
+++ b/src/components/InventoryDisplay.scss
@@ -9,7 +9,8 @@
 }
 
 .factory-game > .inventory-display {
-  padding: 4px 11px 4px 10px;
+  padding: 2px;
+  margin: 4px 11px 4px 10px;
 }
 
 .inventory-slot {
