feat(Incinerator) New building that destroys items
Put things into the incinerator and watch them disappear.
Maybe eventually print Nifty Tickets

--- a/src/icons.scss
+++ b/src/icons.scss
@@ -643,7 +643,8 @@
   height: 64px;
   background-position: 0px -512px;
 }
-.explosives {
+.explosives,
+.incinerator {
   width: 64px;
   height: 64px;
   background-position: -64px -512px;
