feature(rocket) Add launch animation for rocket!
New card for Rocket silo.
Has 'Launch' button which can launch a rocket when it has 100 parts.

--- a/src/components/BuildingCard.scss
+++ b/src/components/BuildingCard.scss
@@ -137,10 +137,14 @@
 .building-card-button {
   font-size: 18px;
   line-height: 22px;
-  min-width: 200px;
+  min-width: 150px;
   margin: 10px 0 0 50px;
   padding: 6px;
   text-align: center;
+  &.disabled {
+    pointer-events: none;
+    opacity: 0.4;
+  }
 }
 
 .choose-research {
