--- a/src/components/InserterCard.scss
+++ b/src/components/InserterCard.scss
@@ -10,6 +10,7 @@ $inserterColor: slategrey;
   width: $appWidth;
   height: $inserterCardHeight;
   z-index: 1;
+  margin-top: 2px;
 
   .inserter-diamond {
     width: 50px;
