misc(UI) UI cleanup

--- a/src/components/InserterCard.scss
+++ b/src/components/InserterCard.scss
@@ -55,6 +55,8 @@ $inserterColor: slategrey;
     .count-area {
       position: relative;
       left: 378px;
+      background-color: #ccc3;
+      width: 100px;
     }
   }
 }
