--- a/src/components/InventoryDisplay.scss
+++ b/src/components/InventoryDisplay.scss
@@ -13,7 +13,7 @@
   margin: 4px 11px 4px 10px;
 }
 
-.inventory-slot {
+.inventory-display .inventory-slot {
   position: relative;
   border: 4px darkgray inset;
   width: 40px;
