Rocket Launching and cheats
Rocket launches again.
New hacky? action to set arbitrary properties on FactoryGameState.

Used along with a new DebugInventory class for some cheats.

--- a/src/components/FactoryGame.scss
+++ b/src/components/FactoryGame.scss
@@ -211,16 +211,21 @@ body {
   padding: 4px;
   border-radius: 4px;
   border: 1px solid #ccc;
+  .button-box {
+    display: flex;
+    flex-direction: row;
+  }
   summary {
     font-weight: bold;
     font-size: 16px;
     user-select: none;
   }
+
   &[open] {
   }
+
   .clickable {
-    width: 250px;
-    display: inline-block;
+    width: 200px;
   }
 }
 
