--- a/src/components/FactoryGame.scss
+++ b/src/components/FactoryGame.scss
@@ -147,10 +147,16 @@ body {
 .close-button {
 }
 
+@media (max-width: 1500px) {
+  .modal {
+    left: 20% !important;
+  }
+}
+
 .modal {
   position: fixed;
   top: 10%;
-  left: 5%;
+  left: 35%;
   transform: translate(0%, 5%);
 }
 
