--- a/src/components/MainBusSegment.scss
+++ b/src/components/MainBusSegment.scss
@@ -76,6 +76,7 @@
       transform: scale(0.35);
       margin: -20px;
       position: absolute;
+      margin-top: 20px;
       z-index: 1;
 
       &.animate {
