WIP on mainbus - hooking up events/stateVm
need to figure out how to create belt lines, not dbl click.
maybe drag

--- a/src/components/MainBusSegment.scss
+++ b/src/components/MainBusSegment.scss
@@ -80,11 +80,11 @@
     .icon {
       will-change: transform;
       transform: scale(0.4);
-      margin: -20px;
+      margin: -22px;
       position: absolute;
       margin-top: 20px;
       z-index: 1;
-
+      filter: drop-shadow(2px 5px black);
       &.animate {
         animation-duration: 6s;
         animation-name: slidein;
