feat(belts) Clean up belt connections
only connect when there is something to connect to
try to turn inserter the correct way

--- a/src/components/MainBusSegment.scss
+++ b/src/components/MainBusSegment.scss
@@ -106,6 +106,10 @@
     top: 50px;
     left: 0;
     margin-top: 10px;
+    &.ghost {
+      opacity: 0.5;
+      pointer-events: none;
+    }
   }
   .belt-connections {
     position: relative;
