--- a/src/components/SaveCard.scss
+++ b/src/components/SaveCard.scss
@@ -23,7 +23,7 @@
 
     color: #ccc;
     .stateList li {
-      display: inline-block;
+      //display: inline-block;
       cursor: pointer;
       &:hover {
         text-decoration: underline;
